# The-Barn-Challenge-ROS2

./: .gitignore  README.md  Singularityfile.def  Singularityfile.def.save  entrypoint.sh  gz_harmonic_world_patcher.py  singularity_run.sh  test.sh
jackal_helper/: CMakeLists.txt  package.xml  ros2_changelist.md
jackal_helper/config/: nav2.yaml  robot.srdf  robot.urdf.xacro  robot.yaml
jackal_helper/config/manipulators/config/: moveit.yaml
jackal_helper/config/platform/config/: control.yaml  diagnostic_aggregator.yaml  diagnostic_updater.yaml  foxglove_bridge.yaml  imu_filter.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_joy.yaml  twist_mux.yaml
jackal_helper/config/platform/launch/: platform-service.launch.py
jackal_helper/config/sensors/config/: gps_0.yaml  imu_0.yaml  lidar2d_0.yaml  lidar2d_1.yaml  lidar3d_0.yaml
jackal_helper/config/sensors/launch/: lidar2d_0.launch.py  lidar2d_1.launch.py  lidar3d_0.launch.py  sensors-service.launch.py
jackal_helper/jackal_helper/: barn_controller.py  utils.py
jackal_helper/launch/: BARN_runner.launch.py  BARN_runner.launch.py.bak  nav2_bringup.launch.py
jackal_helper/scripts/: barn_controller.py  barn_runner.py  gazebo_simulation.py
jackal_helper/worlds/: DynaBARN_harmonic
jackal_helper/worlds/BARN/: world_0.world  world_1.world  world_10.world  world_100.world  world_101.world  world_102.world  world_103.world  world_104.world  world_105.world  world_106.world  world_107.world  world_108.world  world_109.world  world_11.world  world_110.world  world_111.world  world_112.world  world_113.world  world_114.world  world_115.world  world_116.world  world_117.world  world_118.world  world_119.world  world_12.world  world_120.world  world_121.world  world_122.world  world_123.world  world_124.world  world_125.world  world_126.world  world_127.world  world_128.world  world_129.world  world_13.world  world_130.world  world_131.world  world_132.world  world_133.world  (+260 more)
jackal_helper/worlds/DynaBARN/: polynomial_fit.py  temp.py  world_0.world  world_1.world  world_10.world  world_11.world  world_12.world  world_13.world  world_14.world  world_15.world  world_16.world  world_17.world  world_18.world  world_19.world  world_2.world  world_20.world  world_21.world  world_22.world  world_23.world  world_24.world  world_25.world  world_26.world  world_27.world  world_28.world  world_29.world  world_3.world  world_30.world  world_31.world  world_32.world  world_33.world  world_34.world  world_35.world  world_36.world  world_37.world  world_38.world  world_39.world  world_4.world  world_40.world  world_41.world  world_42.world  (+22 more)
jackal_helper/worlds/DynaBARN/DynaBARN_melodic/DynaBARN_worlds_60/: world_0.world  world_1.world  world_10.world  world_11.world  world_12.world  world_13.world  world_14.world  world_15.world  world_16.world  world_17.world  (+50 more)
(+658 files in other folders)
